# canonical-discovery

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  publish-image.yml
docs/: ROADMAP.md
docs/architecture/: ARCHITECTURE.md  IMPLEMENTATION_OUTLINE.md
docs/development/: BRANCHING_WORKFLOW.md  CODE_REVIEW_STANDARD.md  COLLECTOR_WORKFLOW.md  HUMAN_IN_THE_LOOP.md  PROJECTOR_WORKFLOW.md  RUNTIME_VALIDATION.md
docs/rfcs/: 0001-canonical-graph-authority-and-hcl.md  0002-operational-plane-and-deployment-topology.md  0003-1x-carry-over-concepts.md  0004-netbox-projector-carry-over-concepts.md  0005-run-job-task-and-lease-state-model.md  0006-collector-api-contract.md  0007-projection-plan-and-result-artifact-contract.md
scripts/: bump_version.py
src/canonical_discovery/: __init__.py
src/canonical_discovery/api/: __init__.py  app.py
src/canonical_discovery/config/: __init__.py  hcl_models.py  parser.py
src/canonical_discovery/control_plane/: __init__.py  models.py  status.py
src/canonical_discovery/core/: __init__.py  enums.py  models.py  validation.py
src/canonical_discovery/repository/: __init__.py  control_plane.py  sqlite_control_plane.py
tests/: test_collector_api.py  test_control_plane_models.py  test_core_enums.py  test_core_models.py  test_core_validation.py  test_hcl_models.py  test_hcl_parser.py  test_pytest_smoke.py  test_sqlite_control_plane_repository.py
