[tool.poetry]
name = "canonical-discovery"
version = "0.1.0"
description = "Canonical graph-based infrastructure discovery rewrite"
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python-hcl2 = "^7.3.1"
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = ">=8,<9"
ruff = ">=0.6,<1.0"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
